working on index page details

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NKDMSK6"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-    <nav class="navbar navbar-expand-lg fixed-top navbar-transparent" color-on-scroll="300">
-        <div class="container">
+    <nav  class="navbar navbar-expand-lg fixed-top navbar-transparent" color-on-scroll="300">
+        <div  class="container">
 			<div class="navbar-translate">
-				<a class="navbar-brand" href="https://www.creative-tim.com">Charlotte D Driscoll</a>
+				<a class="navbar-brand" href="#home">Charlotte D Driscoll</a>
 	            <button class="navbar-toggler navbar-toggler-right navbar-burger" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-bar"></span>
 					<span class="navbar-toggler-bar"></span>
@@ -87,7 +87,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	            <ul class="navbar-nav ml-auto">
 					<li class="nav-item">
 	                    <a href="profile.html" class="nav-link"><i class="nc-icon nc-layout-11"></i>About Me</a>
-	                </li>
+					</li>
+					<li class="nav-item">
+						<a href="#projects" class="nav-link"><i class="nc-icon nc-layout-11"></i>Projects</a>
+					</li>
 	                <li class="nav-item">
 	                    <a href="../documentation/tutorial-components.html" target="_blank" class="nav-link"><i class="nc-icon nc-book-bookmark"></i>  Documentation</a>
 	                </li>
@@ -112,14 +115,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		
     </nav>
 
-		<div class="page-header" data-parallax="true" style="background-image: url('assets-pk/img/chi.jpg');">
+		<div id="home"  class="page-header" data-parallax="true" style="background-image: url('assets-pk/img/chi.jpg');">
 			<div class="filter"></div>
 			<div class="container">
 			    <div class="motto text-center">
 			        <h1>Hi, I am Charlotte Driscoll</h1>
 			        <h3>& I build things on the Internet. </h3>
 			        <br />
-			        <a href="#my_anchor"class="btn btn-outline-neutral btn-round"><i class="fa fa-caret-down" aria-hidden="true"></i>Enter The Void</a>
+			        <a href="#enter"class="btn btn-outline-neutral btn-round"><i class="fa fa-caret-down" aria-hidden="true"></i>Enter The Void</a>
 			    </div>
 			</div>
     	</div>
@@ -127,8 +130,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="section text-center">
             <div class="container">
                 <div class="row">
-                    <div  id="my_anchor"  class="col-md-8 ml-auto mr-auto">
-                        <h2 class="title">Let's talk product</h2>
+                    <div  id="enter"  class="col-md-8 ml-auto mr-auto">
+                        <h2 class="title">Who I am</h2>
                         <h5 class="description">This is the paragraph where you can write more details about your product. Keep you user engaged by providing meaningful information. Remember that by this time, the user is curious, otherwise he wouldn't scroll to get here. Add a button if you want the user to see more.</h5>
                         <br>
                         <a href="#paper-kit" class="btn btn-danger btn-round">See Details</a>
@@ -143,8 +146,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							</div>
 							<div class="description">
 								<h4 class="info-title">Front End Developer</h4>
-								<p class="description">Spend your time generating new ideas. You don't have to think of implementing.</p>
-								<a href="#pkp" class="btn btn-link btn-danger">See more</a>
+								<p class="description"> designing, coding and modifying websites, from layout to function and according to a client's specifications. 
+									Strive to create visually appealing sites that feature user-friendly design and clear navigation.</p>
+								<img src="https://img.icons8.com/cotton/64/000000/laptop-coding.png">
+
 							</div>
 						</div>
 					</div>
@@ -155,8 +160,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							</div>
 							<div class="description">
 								<h4 class="info-title">UX/UI Designer</h4>
-								<p>Larger, yet dramatically thinner. More powerful, but remarkably power efficient.</p>
-								<a href="#pkp" class="btn btn-link btn-danger">See more</a>
+								<p>The main driving force behind UX is design thinking. ...
+									 Design thinking is not just about making products look nice, it is a designers responsibility to ensure the visual aspects of a design are just the tip of the iceberg. 
+									Design thinking is about creating holistic solutions according to the needs of the users.</p>
+								<img src="https://img.icons8.com/cotton/64/000000/border-color.png">
+
 							</div>
 						</div>
 					</div>
@@ -167,8 +175,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							</div>
 							<div class="description">
 								<h4 class="info-title">Donut Connoisseur</h4>
-								<p>Choose from a veriety of many colors resembling sugar paper pastels.</p>
-								<a href="#pkp" class="btn btn-link btn-danger">See more</a>
+								<p>If given the opportunity to go for dounuts, I will always take it. Searching Chicago and the suburbs in search of the perfect donut. </p>
+								<img src="https://img.icons8.com/cotton/64/000000/cherry-donut.png">
 							</div>
 						</div>
 					</div>
@@ -179,22 +187,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							</div>
 							<div class="description">
 								<h4 class="info-title">Huge Nerd</h4>
-								<p>Find unique and handmade delightful designs related items directly from our sellers.</p>
-								<a href="#pkp" class="btn btn-link btn-danger">See more</a>
+								<p>If my head is not stuck in my computer/a book, you can alwasy find me with my Nintendo Switch playing Skyrim and drinking coffee. (And probaly eating a donut.)</p>
+								<img src="https://img.icons8.com/cotton/64/000000/visual-game-boy.png">
 							</div>
 						</div>
 					</div>
 				</div>
 
-				<div class="input-group date" id="datetimepicker">
-						<input type="text" class="form-control datetimepicker" placeholder="21/04/2018" />
-						  <div class="input-group-append">
-							<span class="input-group-text">
-							  <span class="glyphicon glyphicon-calendar"><i class="fa fa-calendar" aria-hidden="true"></i></span>
-							</span>
-						  </div>
-					  </div>
-					  CopyCopy
+				
 					  
 
             </div>
@@ -202,9 +202,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		
 		
 
-		<div class="section section-dark text-center">
+		<div id="projects" class="section section-dark text-center">
             <div class="container">
-                <h2 class="title">Let's talk about us</h2>
+                <h2 class="title">let's talk about projects</h2>
 				<div class="row">
     				<div class="col-md-4">
                         <div class="card card-profile card-plain">
