--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <h2 class="title">Who I am</h2>
                         <h5 class="description">This is the paragraph where you can write more details about your product. Keep you user engaged by providing meaningful information. Remember that by this time, the user is curious, otherwise he wouldn't scroll to get here. Add a button if you want the user to see more.</h5>
                         <br>
-                        <a href="#paper-kit" class="btn btn-danger btn-round">See Details</a>
+                        <a href="#projects" class="btn btn-danger btn-round">Projects</a>
                     </div>
                 </div>
 				<br/><br/>
@@ -209,41 +209,44 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     				<div class="col-md-4">
                         <div class="card card-profile card-plain">
                             <div class="card-avatar">
-                                <a href="#avatar"><img src="assets-pk/img/faces/clem-onojeghuo-3.jpg" alt="..."></a>
+                                <a href="#avatar"><img src="assets-pk/img/dog.jpg" alt="..."></a>
                             </div>
                             <div class="card-body">
                                 <a href="#paper-kit">
                                     <div class="author">
-                                        <h4 class="card-title">Henry Ford</h4>
-                                        <h6 class="card-category">Product Manager</h6>
+										<a class="text-danger" href="https://barkerapp.herokuapp.com/"><h4 class="text-danger p-2">Barker </h4></a>
+                                        <h6 class="card-category">Web Application</h6>
                                     </div>
                                 </a>
                                 <p class="card-description text-center">
-                                Teamwork is so important that it is virtually impossible for you to reach the heights of your capabilities or make the money that you want without becoming very good at it.
+								Do you ever find yourself walking your dog and wishing you had someone else to walk with or have a dog playdate with?
+								Well, thanks to Barker, you can find your next dog loving friend!
                                 </p>
                             </div>
-                            <div class="card-footer text-center">
+                            <!-- <div class="card-footer text-center">
                                 <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-twitter"></i></a>
                                 <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-google-plus"></i></a>
                                 <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-linkedin"></i></a>
-                            </div>
+                            </div> -->
                         </div>
     				</div>
 
     				<div class="col-md-4">
                         <div class="card card-profile card-plain">
                             <div class="card-avatar">
-                                <a href="#avatar"><img src="assets-pk/img/faces/joe-gardner-2.jpg" alt="..."></a>
+                                <a href="#avatar"><img src="assets-pk/img/lasttry.jpg" alt="..."></a>
                             </div>
                             <div class="card-body">
                                 <a href="#paper-kit">
                                     <div class="author">
-                                        <h4 class="card-title">Sophie West</h4>
-                                        <h6 class="card-category">Designer</h6>
+										<a class="text-danger" href="https://www.behance.net/gallery/70525123/Adobe-XD-Daily-Challenge-Day-1"><h4 class="text-danger p-2">Mobile Money Saving App</h4></a>
+										<h6 class="card-category">Mobile App Wireframe/Prototype</h6>
                                     </div>
                                 </a>
                                 <p class="card-description text-center">
-                                A group becomes a team when each member is sure enough of himself and his contribution to praise the skill of the others. No one can whistle a symphony. It takes an orchestra to play it.
+									I created this mobile money saving app, similar to Mint, for a creative challege organized by Adobe. I used Adobe XD to create the design and wire frame 
+									and also created the prototype to see a small amount of funtionality. There are a few designed pages throughout. I have plans to actually built this applicaton out in 
+									real life. 
                                 </p>
                             </div>
                             <div class="card-footer text-center">
