--- a/profile.html
+++ b/profile.html
@@ -91,57 +91,40 @@
                     <div class="nav-tabs-wrapper">
                         <ul class="nav nav-tabs" role="tablist">
                             <li class="nav-item">
-                                <a class="nav-link active" data-toggle="tab" href="#follows" role="tab">Follows</a>
+                                <a class="nav-link active" data-toggle="tab" href="#follows" role="tab">Music</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" data-toggle="tab" href="#following" role="tab">Following</a>
+                                <a class="nav-link" data-toggle="tab" href="#following" role="tab">Photography</a>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <!-- Tab panes -->
                 <div class="tab-content following">
+
                     <div class="tab-pane active" id="follows" role="tabpanel">
+
+                            <div>
+                                <p>I am a huge fan of music. I listen to music ALL of the time. Does not matter if i'm commuting, coding, running, or driving, I am always listening to something. Here are a few Spotify
+                                    playlists of mine that you are welcome to listen to. Also, there is a follow button right here that you can click to follow and look at all of my music choices. 
+                                </p>
+                                <iframe src="https://open.spotify.com/follow/1/?uri=spotify:user:charbarr_&size=detail&theme=light&show-count=0" width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
+                            </div>
+
+
                         <div class="row">
-                            <div class="col-md-6 ml-auto mr-auto">
-                                <ul class="list-unstyled follows">
+                            <div class="col-md-12">
+                                <ul class="list-unstyled">
                                     <li>
-                                        <div class="row">
-                                            <div class="col-md-2 col-sm-2 ml-auto mr-auto">
-                                                <img src="../assets/img/faces/clem-onojeghuo-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-                                            </div>
-                                            <div class="col-md-7 col-sm-4  ml-auto mr-auto">
-                                                <h6>Flume<br/><small>Musical Producer</small></h6>
-                                            </div>
-                                            <div class="col-md-3 col-sm-2  ml-auto mr-auto">
-												<div class="form-check">
-					                                <label class="form-check-label">
-					                                    <input class="form-check-input" type="checkbox" value="" checked>
-					                                    <span class="form-check-sign"></span>
-					                                </label>
-					                            </div>
-                                            </div>
+                                        <div class="d-flex justify-content-between">
+                                            <iframe src="https://open.spotify.com/embed/playlist/4qwjbECi1ZuGm7THXCXLco?si=RbzpveHRROWEgcEFKOb0bA" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/playlist/0mMAkYS05feN9MlJxXuJtT?si=1C1oKNzcRxm9LuRjhdDvDg" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/playlist/3QAYOerXzaFMByz7GqKUuC?si=aRlN47GsTiG_DMIsOPD2gg" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                                         </div>
+
+                                        
                                     </li>
-                                    <hr />
-                                    <li>
-                                        <div class="row">
-                                            <div class="col-md-2 ml-auto mr-auto ">
-                                                <img src="../assets/img/faces/ayo-ogunseinde-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-                                            </div>
-                                            <div class="col-md-7 col-sm-4">
-                                                <h6>Banks<br /><small>Singer</small></h6>
-                                            </div>
-                                            <div class="col-md-3 col-sm-2">
-												<div class="form-check">
-					                                <label class="form-check-label">
-					                                    <input class="form-check-input" type="checkbox" value="">
-					                                    <span class="form-check-sign"></span>
-					                                </label>
-					                            </div>
-                                            </div>
-                                        </div>
-                                    </li>
+                                  
                                 </ul>
                             </div>
                         </div>
@@ -159,14 +142,14 @@
             <div class="row">
                 <nav class="footer-nav">
                     <ul>
-                        <li><a href="https://www.creative-tim.com">Creative Tim</a></li>
+                        <li><a href="https://www.github.com/cdriscoll621">GitHub</a></li>
                         <li><a href="http://blog.creative-tim.com">Blog</a></li>
                         <li><a href="https://www.creative-tim.com/license">Licenses</a></li>
                     </ul>
                 </nav>
                 <div class="credits ml-auto">
                     <span class="copyright">
-                        © <script>document.write(new Date().getFullYear())</script>, made with <i class="fa fa-heart heart"></i> by Creative Tim
+                        © <script>document.write(new Date().getFullYear())</script>, made with <i class="fa fa-heart heart"></i> by Charlotte Driscoll
                     </span>
                 </div>
             </div>
