--- a/profile.html
+++ b/profile.html
@@ -16,7 +16,10 @@
 	<link href="assets-pk/css/paper-kit.css?v=2.1.0" rel="stylesheet"/>
 
 	<!--  CSS for Demo Purpose, don't include it in your project     -->
-	<link href="assets-pk/css/demo.css" rel="stylesheet" />
+    <link href="assets-pk/css/demo.css" rel="stylesheet" />
+    <link href="index.css" rel="stylesheet" />
+
+    
 
     <!--     Fonts and icons     -->
 	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,300,700' rel='stylesheet' type='text/css'>
@@ -33,15 +36,16 @@
 					<span class="navbar-toggler-bar"></span>
 					<span class="navbar-toggler-bar"></span>
 	            </button>
-	            <a class="navbar-brand" href="">Charlotte Driscoll</a>
+	            <a class="navbar-brand" href="index.html">Charlotte Driscoll</a>
 			</div>
 		    <div class="collapse navbar-collapse" id="navbarToggler">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a href="profile.html" class="nav-link"><i class="nc-icon nc-layout-11"></i>About Me</a>
+                            <a href="index.html" class="nav-link"><i class=""></i>Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="../documentation/tutorial-components.html" target="_blank" class="nav-link"><i class="nc-icon nc-book-bookmark"></i>  Documentation</a>
+                            <a href="profile.html" class="nav-link"><i class=""></i>About Me</a>
+
                         </li>
                     
                         <li class="nav-item">
@@ -100,15 +104,17 @@
                     </div>
                 </div>
                 <!-- Tab panes -->
-                <div class="tab-content following">
+                <div class="tab-content following black-section">
 
                     <div class="tab-pane active" id="follows" role="tabpanel">
 
-                            <div>
+                            <div class="text-center">
                                 <p>I am a huge fan of music. I listen to music ALL of the time. Does not matter if i'm commuting, coding, running, or driving, I am always listening to something. Here are a few Spotify
                                     playlists of mine that you are welcome to listen to. Also, there is a follow button right here that you can click to follow and look at all of my music choices. 
                                 </p>
-                                <iframe src="https://open.spotify.com/follow/1/?uri=spotify:user:charbarr_&size=detail&theme=light&show-count=0" width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
+                                <div class="">
+                                    <iframe src="https://open.spotify.com/follow/1/?uri=spotify:user:charbarr_&size=detail&theme=light&show-count=0" width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
+                                </div>
                             </div>
 
 
@@ -143,8 +149,6 @@
                 <nav class="footer-nav">
                     <ul>
                         <li><a href="https://www.github.com/cdriscoll621">GitHub</a></li>
-                        <li><a href="http://blog.creative-tim.com">Blog</a></li>
-                        <li><a href="https://www.creative-tim.com/license">Licenses</a></li>
                     </ul>
                 </nav>
                 <div class="credits ml-auto">
