--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<a href="#projects" class="nav-link"><i class="nc-icon nc-layout-11"></i>Projects</a>
 					</li>
 	                <li class="nav-item">
-
-
+						<a href="https://charlotteddriscoll.wordpress.com/" class="nav-link"><i class="nc-icon nc-layout-11"></i>Blog</a>
 	                </li>
 				
                     <li class="nav-item">
@@ -130,7 +129,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="row">
                     <div  id="enter"  class="col-md-8 ml-auto mr-auto">
                         <h2 class="title">Who I am</h2>
-                        <h5 class="description">This is the paragraph where you can write more details about your product. Keep you user engaged by providing meaningful information. Remember that by this time, the user is curious, otherwise he wouldn't scroll to get here. Add a button if you want the user to see more.</h5>
+                        <h5 class="description">
+							this is where i talk about me. 
+						</h5>
                         <br>
                         <a href="#projects" class="btn btn-danger btn-round">Projects</a>
                     </div>
