added about me snippet

--- a/index.html
+++ b/index.html
@@ -130,7 +130,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div  id="enter"  class="col-md-8 ml-auto mr-auto">
                         <h2 class="title">Who I am</h2>
                         <h5 class="description">
-							this is where i talk about me. 
+							Hi there! My name is Charlotte, I'm a Web Designer and Front-End Developer based in Chicago, Illinois. 
+							I have been working professionally as a Front End Web Developer and UX/UI Designer for over two years. 
+							I have been creating websites (mobile and desktop) for my agency, and also in my free time for clients.
+							 Design has always been my forte. I am constantly creating, whether it be for work, websites/applications, my own living space, or cooking and baking. 
+							 If I am not stuck on my computer, you can find me in a local coffee shop playing my Nintendo Switch or reading.
+							I am a huge nerd. 
+
 						</h5>
                         <br>
                         <a href="#projects" class="btn btn-danger btn-round">Projects</a>
