--- a/profile.html
+++ b/profile.html
@@ -136,7 +136,7 @@
                         </div>
                     </div>
                     <div class="tab-pane text-center" id="following" role="tabpanel">
-                        <h3 class="text-muted">Not following anyone yet :(</h3>
+                        <h3 class="text-muted"></h3>
                         <button class="btn btn-warning btn-round">Find artists</button>
                     </div>
                 </div>
