--- a/index.html
+++ b/index.html
@@ -116,7 +116,34 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="filter"></div>
 			<div class="container">
 			    <div class="motto text-center">
-			        <h1>Hi, I am Charlotte Driscoll</h1>
+			        <h1>Hi, I am 
+
+
+						<div class="scramble-content header-txt mt-2">
+							<div class="random">
+								<span class="nbr ltr">0</span>
+								<span class="nbr ltr">0</span>
+								<span class="nbr ltr">0</span>
+								<span class="nbr ltr">0</span>
+								<span class="nbr ltr">0</span>
+								<span class="nbr ltr">0</span>
+								<span class="nbr ltr">0</span>
+								<span class="nbr ltr">0</span>
+								<span class="nbr ltr">0</span>
+								<span class="nbr ltr">0</span>
+								<span class="nbr ltr">0</span>
+								<span class="nbr ltr">0</span>
+								<span class="nbr ltr">0</span>
+								<span class="nbr ltr">0</span>
+								<span class="nbr ltr">0</span>
+								<span class="nbr ltr">0</span>
+								<span class="nbr ltr">0</span>
+								<span class="nbr ltr">0</span>
+							</div>
+						</div>
+
+
+					</h1>
 			        <h3>& I build things on the Internet. </h3>
 			        <br />
 			        <a href="#enter"class="btn btn-outline-neutral btn-round"><i class="fa fa-caret-down" aria-hidden="true"></i>Enter The Void</a>
@@ -332,13 +359,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 		</div>
 	</footer>
+
+
+
 </body>
 
 <!-- Core JS Files -->
 <script src="assets-pk/js/jquery-3.2.1.js" type="text/javascript"></script>
 <script src="assets-pk/js/jquery-ui-1.12.1.custom.min.js" type="text/javascript"></script>
+<script src="index.js"></script>
 <script src="assets-pk/js/popper.js" type="text/javascript"></script>
 <script src="assets-pk/js/bootstrap.min.js" type="text/javascript"></script>
+
 
 <!--  Paper Kit Initialization snd functons -->
 <script src="assets-pk/js/paper-kit.js?v=2.1.0"></script>
