--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <nav  class="navbar navbar-expand-lg fixed-top navbar-transparent" color-on-scroll="300">
         <div  class="container">
 			<div class="navbar-translate">
-				<a class="navbar-brand" href="#home">Charlotte D Driscoll</a>
+				<a class="navbar-brand" href="#home">CD</a>
 	            <button class="navbar-toggler navbar-toggler-right navbar-burger" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-bar"></span>
 					<span class="navbar-toggler-bar"></span>
