updating google tings

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 	<link href="assets-pk/css/demo.css" rel="stylesheet" />
 
 	<!-- Canonical SEO -->
-	<link rel="canonical" href=" https://www.creative-tim.com/product/paper-kit-2">
+	<!-- <link rel="canonical" href="http://awful-goose.surge.sh/"> -->
 
 	<!--  Social tags      -->
-	<meta name="keywords" content="creative tim, bootstrap 4 kit, ui kit, web kit, paper kit, web design, web development, presentation pages, frontend, responsive bootstrap 4 template">
+	<meta name="keywords" content=" charlotte driscoll, web design, web development, frontend, responsive bootstrap 4, web developer, ui/ux">
 
-	<meta name="description" content="Paper Kit 2 is a free Bootstrap 4 UI Kit with pale colors, beatiful typography and thoughtful drawings. We created it having paper and drawings in mind.">
+	<meta name="description" content="i build things on the internet.">
 
 	<!-- Schema.org markup for Google+ -->
-	<meta itemprop="name" content="Paper Kit 2 by Creative Tim | Free Bootstrap 4 UI Kit">
-	<meta itemprop="description" content="Paper Kit 2 is a free Bootstrap 4 UI Kit with pale colors, beatiful typography and thoughtful drawings. We created it having paper and drawings in mind.">
-	<meta itemprop="image" content="https://s3.amazonaws.com/creativetim_bucket/products/61/opt_pk2_thumbnail.jpg">
+	<meta itemprop="name" content="Charlotte Driscoll">
+	<meta itemprop="description" content="i build things on the internet.">
+	<meta itemprop="image" content="">
 
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary_large_image">
