--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
 	<meta itemprop="image" content="">
 
 	<!-- Twitter Card data -->
-	<meta name="twitter:card" content="summary_large_image">
+	<!-- <meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@creativetim">
 	<meta name="twitter:title" content="Paper Kit 2 by Creative Tim">
 	<meta name="twitter:description" content="Paper Kit 2 is a free Bootstrap 4 UI Kit with pale colors, beatiful typography and thoughtful drawings. We created it having paper and drawings in mind.">
 	<meta name="twitter:creator" content="@creativetim">
-	<meta name="twitter:image" content="https://s3.amazonaws.com/creativetim_bucket/products/61/opt_pk2_thumbnail.jpg">
+	<meta name="twitter:image" content="https://s3.amazonaws.com/creativetim_bucket/products/61/opt_pk2_thumbnail.jpg"> -->
 
 	<!-- Open Graph data -->
-	<meta property="fb:app_id" content="655968634437471">
+	<!-- <meta property="fb:app_id" content="655968634437471">
 	<meta property="og:title" content="Paper Kit 2 by Creative Tim">
 	<meta property="og:type" content="article">
 	<meta property="og:url" content="https://www.creative-tim.com/product/paper-kit-2">
 	<meta property="og:image" content="https://s3.amazonaws.com/creativetim_bucket/products/61/opt_pk2_thumbnail.jpg">
 	<meta property="og:description" content="Paper Kit 2 is a free Bootstrap 4 UI Kit with pale colors, beatiful typography and thoughtful drawings. We created it having paper and drawings in mind.">
-	<meta property="og:site_name" content="Creative Tim">
+	<meta property="og:site_name" content="Creative Tim"> -->
 
 	<!-- Bootstrap core CSS     -->
 	<link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
