--- a/index.html
+++ b/index.html
@@ -339,3 +339,33 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
+
+<!-- SCACPA Nav Bar Complete -->
+<!--- SCACPA Top Nav/Social BAR -->
+<!-- 
+    <nav class="navbar navbar-expand-lg bg-primary text-white rounded-0 d-flex justify-content-between pl-5 pr-5 m-0" style="height:36px">
+
+        <div class=""> 
+            <i class="fa fa-twitter p-2"></i>
+            <i class="fa fa-facebook-f p-2"></i>
+            <i class="fa fa-youtube-play p-2"></i>
+            <i class="fa fa-linkedin p-2"></i>
+        </div>
+
+        <div>
+            <a>Login</a>
+        </div>
+
+    </nav> -->
+
+    <!-- END SCACPA TOP Nav/Social Bar -->
+
+    <!-- <div class="flex p-2 bg-white" style="height: 150px">
+        
+        <a class="navbar-brand d-none d-lg-block pb-0 pt-3" href="/"><img src="~/images/scacpa-logo-new.png" style="height:auto; max-width:250px; margin-left:100px;"></a>
+
+    </div>
+    @await Component.InvokeAsync("Header") -->
+
+
+    <!-- End SCACPA Navbar Complete -->
