adding landing page

--- a/cert.html
+++ b/cert.html
@@ -2,7 +2,7 @@
 	<head>
         <title>SCACPA Certificate</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link href="/Users/cdriscoll/Desktop/yo/assets-pk/css/style.css">
+        <link href="index.css"
         <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
         
     </head>
