got flip card for landing to work

--- a/cert.html
+++ b/cert.html
@@ -15,7 +15,7 @@
                         
                     <img class="print-img" src="assets-pk/img/cert.png">
 
-                    <p class="print-text">This Certifies</p>
+                    <p style="font-family: 'Nanum Gothic', sans-serif;">This Certifies</p>
                     <h3>Name Here</h2>
                     <p class="print-text">Attended/Completed</p>
                     <h3>Course Name</h2>
