--- a/landing.html
+++ b/landing.html
@@ -12,86 +12,50 @@
     <meta name="viewport" content="width=device-width" />
 
 	<!-- Bootstrap core CSS     -->
-	<link href="assets-pk/css/bootstrap.min.css" rel="stylesheet" />
-	<link href="assets-pk/css/paper-kit.css?v=2.1.0" rel="stylesheet"/>
-
-	<!--  CSS for Demo Purpose, don't include it in your project     -->
-    <link href="assets-pk/css/demo.css" rel="stylesheet" />
+	 <link href="assets-pk/css/bootstrap.min.css" rel="stylesheet" /> 
+	 <link href="assets-pk/css/paper-kit.css?v=2.1.0" rel="stylesheet"/> 
     <link href="index.css" rel="stylesheet" />
 
-    
+
 
     <!--     Fonts and icons     -->
 	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,300,700' rel='stylesheet' type='text/css'>
 	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-	<link href="assets-pk/css/nucleo-icons.css" rel="stylesheet">
-
+	<link href="../assets/css/nucleo-icons.css" rel="stylesheet">
 
 </head>
 <body>
+
     <div class="wrapper">
-        <div class="page-header" style="background-image: url('assets-pk/img/login-image.jpg');">
-            <div class="filter"></div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-4 ml-auto mr-auto">
-                            <div class="card">
-
-                                    <div class="card__side card__side--front">
-                                            <!-- Front Content -->
-                                            <div class="card__cont">
-                                                <span class="blue">alert</span><span>(<span class="green">'Hello World!'</span>)</span>
-                                            </div>
-                                            </div>
-                                            <div class="card__side card__side--back">
-                                            <!-- Back Content -->
-                                            <div class="card__cta">
-                                                <p><span class="purple">const</span> aboutMe <span class="cyan">=</span> {
-                                                <br />
-                                                <span class="space red">name</span><span class="cyan">:</span> <span class="green">'laura pinto'</span>,
-                                                <br/>
-                                                <span class="space red">email</span><span class="cyan">:</span> <span class="green">'lauraalpinto@gmail.com</span>',
-                                                <br/>
-                                                <span class="space red">position</span><span class="cyan">:</span> <span class="green">'front-end developer'</span>,
-                                                <br/>
-                                                <span class="space red">website</span><span class="cyan">:</span> <span class="green">'lauraalpinto.github.io'</span>
-                                                <br/> };
-                                                </p>
-                                            </div>
-                                        </div>    
-
-                            </div>
-                            <!-- <div class="card card-register">
-                                <h3 class="title">Welcome</h3>
-								<div class="social-line text-center">
-                                    <a href="#pablo" class="btn btn-neutral btn-facebook btn-just-icon">
-                                        <i class="fa fa-facebook-square"></i>
-                                    </a>
-                                    <a href="#pablo" class="btn btn-neutral btn-google btn-just-icon">
-                                        <i class="fa fa-google-plus"></i>
-                                    </a>
-									<a href="#pablo" class="btn btn-neutral btn-twitter btn-just-icon">
-										<i class="fa fa-twitter"></i>
-									</a>
-                                </div>
-                                <form class="register-form">
-                                    <label>Email</label>
-                                    <input type="text" class="form-control" placeholder="Email">
-
-                                    <label>Password</label>
-                                    <input type="password" class="form-control" placeholder="Password">
-                                    <button class="btn btn-danger btn-block btn-round">Register</button>
-                                </form>
-                                <div class="forgot">
-                                    <a href="#" class="btn btn-link btn-danger">Forgot password?</a>
-                                </div>
-                            </div> -->
-                        </div>
+        <div class="page-header" style="background-image: url('assets-pk/img/chi.jpg');">
+            <div class="flip-content">
+                <div class="flip">
+                    <div class="flip__side flip__side--front">
+                    <!-- Front Content -->
+                    <div class="flip__cont">
+                    <span class="blue">alert</span><span>(<span class="green">'Hello World!'</span>)</span>
                     </div>
-					<div class="footer register-footer text-center">
-						<h6>&copy; <script>document.write(new Date().getFullYear())</script>, made with <i class="fa fa-heart heart"></i> by Charlotte Driscoll</h6>
-					</div>
+                    </div>
+                    <div class="flip__side flip__side--back">
+                    <!-- Back Content -->
+                    <div class="flip__cta">
+                    <p><span class="purple">const</span> aboutMe <span class="cyan">=</span> {
+                    <br />
+                    <span class="space red">name</span><span class="cyan">:</span> <span class="green">'charlotte driscoll'</span>,
+                    <br/>
+                    <span class="space red">email</span><span class="cyan">:</span> <span class="green">'chardriscoll8@gmail.com</span>',
+                    <br/>
+                    <span class="space red">position</span><span class="cyan">:</span> <span class="green">'front-end developer'</span>,
+                    <br/>
+                    <span class="space red">website</span><span class="cyan">:</span> <span class="green">'cdriscoll621.github.io'</span>
+                    <br/> };
+                    </p>
+                    </div>
                 </div>
+            </div>
+
+            <a href="index.html"class="btn btn-outline-neutral btn-round"><i class="fa fa-caret-down" aria-hidden="true"></i>Enter The Void</a>
+
         </div>
     </div>
 </body>
