--- a/cert.html
+++ b/cert.html
@@ -2,7 +2,7 @@
 	<head>
         <title>SCACPA Certificate</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link href="index.css"
+        <link href="cert.css"
         <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
         
     </head>
@@ -15,7 +15,7 @@
                         
                     <img class="print-img" src="assets-pk/img/cert.png">
 
-                    <p style="font-family: 'Nanum Gothic', sans-serif;">This Certifies</p>
+                    <p class="print-text">This Certifies</p>
                     <h3>Name Here</h2>
                     <p class="print-text">Attended/Completed</p>
                     <h3>Course Name</h2>
