adding stock images

--- a/landing.html
+++ b/landing.html
@@ -27,7 +27,7 @@
 <body>
 
     <div class="wrapper">
-        <div class="page-header" style="background-image: url('assets-pk/img/chi.jpg');">
+        <div class="page-header" style="background-image: url('assets-pk/img/chi-3.jpg');">
             <div class="flip-content">
                 <div class="flip">
                     <div class="flip__side flip__side--front">
