--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					</h1>
 			        <h3>& I build things on the Internet. </h3>
 			        <br />
-			        <a href="#enter"class="btn btn-outline-neutral btn-round"><i class="fa fa-caret-down" aria-hidden="true"></i>Enter The Void</a>
+			        <a href="#enter"class="btn btn-outline-neutral btn-round"><i class="fa fa-caret-down" aria-hidden="true"></i></a>
 			    </div>
 			</div>
     	</div>
