--- a/landing.html
+++ b/landing.html
@@ -15,6 +15,11 @@
 	 <link href="assets-pk/css/bootstrap.min.css" rel="stylesheet" /> 
 	 <link href="assets-pk/css/paper-kit.css?v=2.1.0" rel="stylesheet"/> 
     <link href="index.css" rel="stylesheet" />
+    <link href="index.css" rel="stylesheet" />
+
+
+
+
 
 
 
