--- a/index.html
+++ b/index.html
@@ -31,13 +31,6 @@
 	<meta itemprop="description" content="i build things on the internet.">
 	<meta itemprop="image" content="">
 
-	<!-- Twitter Card data -->
-	<!-- <meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:site" content="@creativetim">
-	<meta name="twitter:title" content="Paper Kit 2 by Creative Tim">
-	<meta name="twitter:description" content="Paper Kit 2 is a free Bootstrap 4 UI Kit with pale colors, beatiful typography and thoughtful drawings. We created it having paper and drawings in mind.">
-	<meta name="twitter:creator" content="@creativetim">
-	<meta name="twitter:image" content="https://s3.amazonaws.com/creativetim_bucket/products/61/opt_pk2_thumbnail.jpg"> -->
 
 	<!-- Open Graph data -->
 	<!-- <meta property="fb:app_id" content="655968634437471">
@@ -61,11 +54,11 @@
 	<link href="../assets/css/nucleo-icons.css" rel="stylesheet" />
 
 	<!-- Google Tag Manager -->
-	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	<!-- <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-	})(window,document,'script','dataLayer','GTM-NKDMSK6');</script>
+	})(window,document,'script','dataLayer','GTM-NKDMSK6');</script> -->
 	<!-- End Google Tag Manager -->
 </head>
 <body>
